--- a/index.html
+++ b/index.html
@@ -1391,7 +1391,7 @@
                     </form>
                     <div style="margin-top: 3rem; border-top: 1px solid var(--border-glass); padding-top: 2rem;">
                         <p style="color: white; font-weight: 700; margin-bottom: 0.5rem;">Email Us</p>
-                        <a href="mailto:sales@ddn.one" style="color: var(--accent-primary); font-size: 1.2rem;">sales@ddn.one</a>
+                        <a href="mailto:sales@ddnet.my" style="color: var(--accent-primary); font-size: 1.2rem;">sales@ddnet.my</a>
                     </div>
                 </div>
             </div>
@@ -1557,7 +1557,7 @@
                     <h4>Contact</h4>
                     <div class="footer-contact-item">
                         <i class="ri-mail-send-line"></i>
-                        <span>sales@ddn.one</span>
+                        <span>sales@ddnet.my</span>
                     </div>
                     <div class="footer-contact-item">
                         <i class="ri-whatsapp-line"></i>
@@ -1572,8 +1572,8 @@
                 
                 <div class="mac-dock">
                     <a href="https://linkedin.com" target="_blank" class="dock-icon"><i class="ri-linkedin-fill"></i></a>
-                    <a href="https://instagram.com" target="_blank" class="dock-icon"><i class="ri-instagram-line"></i></a>
-                    <a href="https://tiktok.com" target="_blank" class="dock-icon"><i class="ri-tiktok-fill"></i></a>
+                    <a href="https://www.instagram.com/ddnet.my/" target="_blank" class="dock-icon"><i class="ri-instagram-line"></i></a>
+                    <a href="https://tiktok.com/danialddanish/" target="_blank" class="dock-icon"><i class="ri-tiktok-fill"></i></a>
                     <a href="https://x.com" target="_blank" class="dock-icon"><i class="ri-twitter-x-fill"></i></a>
                 </div>
             </div>
