--- a/index.html
+++ b/index.html
@@ -1407,8 +1407,8 @@
                     "My journey started with a curiosity for code. Today, DDNetwork One is result of years of experimentation, late-night coding sessions, and a genuine passion for helping local businesses succeed in digital age. I believe in simplicity, speed, and smart design."
                 </p>
                 <div style="display: flex; gap: 1rem;">
-                    <a href="#" style="width: 40px; height: 40px; background: var(--bg-surface); border-radius: 50%; display: flex; align-items: center; justify-content: center; border:1px solid var(--border-glass);"><i class="ri-linkedin-fill"></i></a>
-                    <a href="#" style="width: 40px; height: 40px; background: var(--bg-surface); border-radius: 50%; display: flex; align-items: center; justify-content: center; border:1px solid var(--border-glass);"><i class="ri-instagram-line"></i></a>
+                    <a href="https://www.linkedin.com/in/muhammad-danial-danish-217bb82ba/" style="width: 40px; height: 40px; background: var(--bg-surface); border-radius: 50%; display: flex; align-items: center; justify-content: center; border:1px solid var(--border-glass);"><i class="ri-linkedin-fill"></i></a>
+                    <a href="https://www.instagram.com/ddnet.my/" style="width: 40px; height: 40px; background: var(--bg-surface); border-radius: 50%; display: flex; align-items: center; justify-content: center; border:1px solid var(--border-glass);"><i class="ri-instagram-line"></i></a>
                 </div>
             </div>
         </section>
@@ -1571,9 +1571,9 @@
                 <p class="copyright">&copy; 2025-2026 DDNetwork One. PG0572133-K All rights reserved.</p>
                 
                 <div class="mac-dock">
-                    <a href="https://linkedin.com" target="_blank" class="dock-icon"><i class="ri-linkedin-fill"></i></a>
+                    <a href="https://www.linkedin.com/in/muhammad-danial-danish-217bb82ba/" target="_blank" class="dock-icon"><i class="ri-linkedin-fill"></i></a>
                     <a href="https://www.instagram.com/ddnet.my/" target="_blank" class="dock-icon"><i class="ri-instagram-line"></i></a>
-                    <a href="https://tiktok.com/danialddanish/" target="_blank" class="dock-icon"><i class="ri-tiktok-fill"></i></a>
+                    <a href="https://tiktok.com/@danialddanish/" target="_blank" class="dock-icon"><i class="ri-tiktok-fill"></i></a>
                     <a href="https://x.com" target="_blank" class="dock-icon"><i class="ri-twitter-x-fill"></i></a>
                 </div>
             </div>
