--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
             <a href="/" onclick="routeLink(event, '/')">Home</a>
             <a href="/pricing" onclick="routeLink(event, '/pricing')">Pricing</a>
             <a href="/clients" onclick="routeLink(event, '/clients')">Clients</a>
-            <a href="/founder" onclick="routeLink(event, '/founder')">Founder</a>
+            <a href="/founder-danialdanish" onclick="routeLink(event, '/founder-danialdanish')">Founder</a>
             <a href="/updates" onclick="routeLink(event, '/updates')">Updates</a>
             <a href="#" onclick="openTermsModal()">Terms</a>
             
@@ -753,7 +753,7 @@
             <li><a href="/" onclick="routeLink(event, '/'); toggleDrawer()">Home</a></li>
             <li><a href="/pricing" onclick="routeLink(event, '/pricing'); toggleDrawer()">Pricing</a></li>
             <li><a href="/clients" onclick="routeLink(event, '/clients'); toggleDrawer()">Clients</a></li>
-            <li><a href="/founder" onclick="routeLink(event, '/founder'); toggleDrawer()">Founder</a></li>
+            <li><a href="/founder-danialdanish" onclick="routeLink(event, '/founder-danialdanish'); toggleDrawer()">Founder</a></li>
             <li><a href="/updates" onclick="routeLink(event, '/updates'); toggleDrawer()">Updates</a></li>
             <li><a href="#" onclick="openTermsModal(); toggleDrawer()">Terms</a></li>
             
@@ -1832,7 +1832,7 @@
         // ==========================================
         const routes = {
             '/': 'home', '/pricing': 'services', '/order': 'buynow', '/clients': 'clients',
-            '/founder': 'founder', '/login': 'login', '/signup': 'signup', '/profile': 'profile',
+            '/founder-danialdanish': 'founder', '/login': 'login', '/signup': 'signup', '/profile': 'profile',
             '/helpdesk': 'helpdesk', '/contact': 'contact', '/forgot-password': 'forgot-password',
             '/thank-you': 'thank-you', '/updates': 'updates'
         };
