--- a/index.html
+++ b/index.html
@@ -2229,7 +2229,7 @@
         // NEW: IMGBB UPLOAD FUNCTION
         // ==========================================
         async function uploadToImgBB(file) {
-            if (!IMGBB_API_KEY || IMGBB_API_KEY === "YOUR_IMGBB_API_KEY") {
+            if (!IMGBB_API_KEY || IMGBB_API_KEY === "c7a4fa19a8609092cea4714138cf4e94") {
                 console.error("ImgBB API Key is missing.");
                 return null;
             }
@@ -2305,7 +2305,7 @@
         }
         
         // Initialize EmailJS globally
-        if(window.emailjs && EMAILJS_PUBLIC_KEY !== "YOUR_PUBLIC_KEY") {
+        if(window.emailjs && EMAILJS_PUBLIC_KEY !== "RoEAd71lEvJ4Th2Vu") {
             window.emailjs.init(EMAILJS_PUBLIC_KEY);
         }
 
