--- a/index.html
+++ b/index.html
@@ -733,6 +733,7 @@
             <a href="/" onclick="routeLink(event, '/')">Home</a>
             <a href="/pricing" onclick="routeLink(event, '/pricing')">Pricing</a>
             <a href="/clients" onclick="routeLink(event, '/clients')">Clients</a>
+            <a href="https://careers.ddnet.my" target="_blank">Careers</a>
             <a href="/founder-danialdanish" onclick="routeLink(event, '/founder-danialdanish')">Founder</a>
             <a href="/updates" onclick="routeLink(event, '/updates')">Updates</a>
             <a href="#" onclick="openTermsModal()">Terms</a>
@@ -753,6 +754,7 @@
             <li><a href="/" onclick="routeLink(event, '/'); toggleDrawer()">Home</a></li>
             <li><a href="/pricing" onclick="routeLink(event, '/pricing'); toggleDrawer()">Pricing</a></li>
             <li><a href="/clients" onclick="routeLink(event, '/clients'); toggleDrawer()">Clients</a></li>
+            <li><a href="https://careers.ddnet.my" target="_blank">Careers</a></li>
             <li><a href="/founder-danialdanish" onclick="routeLink(event, '/founder-danialdanish'); toggleDrawer()">Founder</a></li>
             <li><a href="/updates" onclick="routeLink(event, '/updates'); toggleDrawer()">Updates</a></li>
             <li><a href="#" onclick="openTermsModal(); toggleDrawer()">Terms</a></li>
