--- a/index.html
+++ b/index.html
@@ -1982,21 +1982,21 @@
         // SEO TITLES CONFIGURATION
         // ==========================================
         const PAGE_TITLES = {
-            '/': 'DDNetwork One | Malaysia Web Solutions',
-            '/pricing': 'Pricing Packages | DDNetwork One',
-            '/reviews': 'Client Reviews | DDNetwork One',
-            '/order': 'Secure Checkout | DDNetwork One',
-            '/clients': 'Portfolio & Clients | DDNetwork One',
-            '/founder-danialdanish': 'Founder | DDNetwork One',
-            '/login': 'Login | DDNetwork One',
-            '/signup': 'Sign Up | DDNetwork One',
-            '/profile': 'User Profile | DDNetwork One',
-            '/profile-website-describe': 'Describe Website Idea | DDNetwork One',
-            '/helpdesk': 'Support Helpdesk | DDNetwork One',
-            '/contact': 'Contact Us | DDNetwork One',
-            '/forgot-password': 'Reset Password | DDNetwork One',
-            '/thank-you': 'Order Successful | DDNetwork One',
-            '/updates': 'Customer Requests | DDNetwork One'
+            '/': 'DDNetwork One',
+            '/pricing': 'Pricing Packages | DDNetwork',
+            '/reviews': 'Client Reviews | DDNetwork',
+            '/order': 'Secure Checkout | DDNetwork',
+            '/clients': 'Portfolio & Clients | DDNetwork',
+            '/founder-danialdanish': 'Danial Danish - Founder DDNetwork',
+            '/login': 'Login - DDNetwork',
+            '/signup': 'Sign Up - DDNetwork',
+            '/profile': 'User Profile - DDNetwork',
+            '/profile-website-describe': 'Describe Website Idea',
+            '/helpdesk': 'Support Helpdesk - DDNetwork',
+            '/contact': 'Contact Us @ DDNetwork',
+            '/forgot-password': 'Reset Password - DDNetwork',
+            '/thank-you': 'Order Successful - DDNetwork',
+            '/updates': 'Customer Requests - DDNetwork'
         };
 
         function updatePageTitle(path) {
