--- a/index.html
+++ b/index.html
@@ -1549,7 +1549,7 @@
                             <li>Multi-User Internal Portal Access</li>
                             <li>Website Integration & Database Management</li>
                             <li>Advanced Analytics & Custom Dashboards</li>
-                            <li>Workflow Automation</li>
+                            <li>IT Support System by DDNetwork</li>
                             <li>Enterprise-Level Support</li>
                         </ul>
                         <button class="btn btn-glass" style="width: 100%; background: linear-gradient(45deg, #6366f1, #a855f7); border-color: transparent; color: white;" onclick="attemptSelectPackage('Front-End + Portal', 'bundle')">Select Bundle</button>
@@ -1599,7 +1599,7 @@
                             <li>Multi-User Internal Portal Access</li>
                             <li>Website Integration & Database Management</li>
                             <li>Advanced Analytics & Custom Dashboards</li>
-                            <li>Workflow Automation & Business Process Integration</li>
+                            <li>IT Support System by DDNetwork & Business Process Integration</li>
                             <li>Enterprise-Level Support & Maintenance</li>
                         </ul>
                         <button class="btn btn-glass" style="width: 100%;" onclick="attemptSelectPackage('Portal Standalone', 'portal')">Request Quote</button>
@@ -2199,7 +2199,7 @@
                 monthly: 279, 
                 yearly: 2599, 
                 saveYearly: 749, 
-                desc: "Multi-User Portal, Database, Dashboards, Workflow Automation." 
+                desc: "Multi-User Portal, Database, Dashboards, IT Support System by DDNetwork." 
             }
         };
 
