--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Dynamic Title handled by JS -->
-    <title>DDNetwork One</title>
+    <title> Malaysia Website Custom | DDNetwork One</title>
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/ddnetwork-one/ddnetwork-store/refs/heads/main/crop_ddnlogo.png">
@@ -1724,7 +1724,7 @@
                             <li>Multi-User Internal Portal Access</li>
                             <li>Website Integration & Database Management</li>
                             <li>Advanced Analytics & Custom Dashboards</li>
-                            <li>Workflow Automation</li>
+                            <li>Get IT Support by DDNetwork.</li>
                             <li>Enterprise-Level Support</li>
                         </ul>
                         <button class="btn btn-glass" style="width: 100%; background: linear-gradient(45deg, #6366f1, #a855f7); border-color: transparent; color: white;" onclick="attemptSelectPackage('Front-End + Portal', 'bundle')">Select Bundle</button>
@@ -1774,7 +1774,7 @@
                             <li>Multi-User Internal Portal Access</li>
                             <li>Website Integration & Database Management</li>
                             <li>Advanced Analytics & Custom Dashboards</li>
-                            <li>Workflow Automation & Business Process Integration</li>
+                            <li>Get IT Support by DDNetwork. & Business Process Integration</li>
                             <li>Enterprise-Level Support & Maintenance</li>
                         </ul>
                         <button class="btn btn-glass" style="width: 100%;" onclick="attemptSelectPackage('Portal Standalone', 'portal')">Request Quote</button>
@@ -2377,7 +2377,7 @@
                 monthly: 279, 
                 yearly: 2599, 
                 saveYearly: 749, 
-                desc: "Multi-User Portal, Database, Dashboards, Workflow Automation." 
+                desc: "Multi-User Portal, Database, Dashboards, Get IT Support by DDNetwork.." 
             }
         };
 
