--- a/index.html
+++ b/index.html
@@ -2314,7 +2314,9 @@
                 <h2 style="margin-bottom: 0.5rem;">Danial Danish</h2>
                 <p style="color: var(--soft-black); font-weight: 700; letter-spacing: 1px; text-transform: uppercase; font-size: 0.8rem; margin-bottom: 1.5rem;">Founder & Lead Developer</p>
                 <p style="color: var(--text-secondary); max-width: 600px; line-height: 1.7; margin-bottom: 1.5rem;">
-                    "My journey started with a curiosity for code. Today, DDNetwork One is result of years of experimentation, late-night coding sessions, and a genuine passion for helping local businesses succeed in digital age. I believe in simplicity, speed, and smart design."
+                    "My journey began with a curiosity for code. What started as late-night experiments grew into DD Cloud Network, a company built on simplicity, speed, and thoughtful digital design.
+<br><br>
+Through DD Cloud Network, I created DDNetwork as a dedicated brand to help local businesses build a strong, modern presence in the digital world."
                 </p>
                 <div style="display: flex; gap: 1rem;">
                     <a href="https://www.linkedin.com/in/muhammad-danial-danish-217bb82ba/" style="width: 40px; height: 40px; background: var(--bg-surface); border-radius: 50%; display: flex; align-items: center; justify-content: center; border:1px solid var(--border-glass);"><i class="ri-linkedin-fill"></i></a>
@@ -2575,25 +2577,25 @@
         // SEO TITLES CONFIGURATION
         // ==========================================
         const PAGE_TITLES = {
-            '/': 'DDNetwork One',
-            '/home': 'DDNetwork One',
-            '/pricing': 'Pricing Packages | DDNetwork',
-            '/reviews': 'Client Reviews | DDNetwork',
-            '/order': 'Secure Checkout | DDNetwork',
-            '/clients': 'Portfolio & Clients | DDNetwork',
-            '/founder-danialdanish': 'Danial Danish - Founder DDNetwork',
-            '/login': 'Login - DDNetwork',
-            '/signup': 'Sign Up - DDNetwork',
-            '/profile': 'User Profile - DDNetwork',
+            '/': 'DDNetwork by DD Cloud Network',
+            '/home': 'DDNetwork',
+            '/pricing': 'Pricing Packages',
+            '/reviews': 'Client Reviews',
+            '/order': 'Secure Checkout',
+            '/clients': 'Portfolio & Clients',
+            '/founder-danialdanish': 'Danial Danish – Founder of DD Cloud Network & DDNetwork',
+            '/login': 'Login',
+            '/signup': 'Sign Up',
+            '/profile': 'User Profile',
             '/profile-website-describe': 'Describe Website Idea',
-            '/helpdesk': 'Support Helpdesk - DDNetwork',
+            '/helpdesk': 'Support Helpdesk @ DDNetwork',
             '/contact': 'Contact Us @ DDNetwork',
-            '/forgot-password': 'Reset Password - DDNetwork',
+            '/forgot-password': 'Reset Password',
             '/thank-you': 'Order Successful - DDNetwork',
-            '/updates': 'Customer Requests - DDNetwork',
-            '/about-company': 'About Company | DDNetwork',
-            '/terms': 'Terms & Conditions | DDNetwork',
-            '/faq': 'Frequently Asked Questions | DDNetwork'
+            '/updates': 'Customer Requests',
+            '/about-company': 'About Company',
+            '/terms': 'Terms & Conditions',
+            '/faq': 'Frequently Asked Questions'
         };
 
         function updatePageTitle(path) {
