--- a/index.html
+++ b/index.html
@@ -2462,7 +2462,7 @@ Through DD Cloud Network, I created DDNetwork as a dedicated brand to help local
             </div>
 
             <div class="footer-bottom">
-                <p class="copyright">&copy; © 2025–2026 DD Cloud Network · DDNetwork One · Reg. No. 202603040752 (MA0342542-K)</p>
+                <p class="copyright">&copy; 2025–2026 DD Cloud Network · DDNetwork One · Reg. No. 202603040752 (MA0342542-K)</p>
                 
                 <div class="mac-dock">
                     <a href="https://www.linkedin.com/in/muhammad-danial-danish-217bb82ba/" target="_blank" class="dock-icon"><i class="ri-linkedin-fill"></i></a>
@@ -2540,7 +2540,7 @@ Through DD Cloud Network, I created DDNetwork as a dedicated brand to help local
                 <p>DDNetwork One reserves right to update or modify these Terms & Conditions at any time.</p>
                 <p>Continued use of services constitutes acceptance of updated terms.</p>
                 
-                <p style="margin-top: 3rem; font-weight: 700; text-align:center;">&copy; © 2025–2026 DD Cloud Network · DDNetwork · Reg. No. 202603040752 (MA0342542-K)</p>
+                <p style="margin-top: 3rem; font-weight: 700; text-align:center;">&copy; 2025–2026 DD Cloud Network · DDNetwork · Reg. No. 202603040752 (MA0342542-K)</p>
             </div>
         </div>
     </div>
