--- a/index.html
+++ b/index.html
@@ -3123,11 +3123,7 @@ Through DD Cloud Network, I created DDNetwork as a dedicated brand to help local
 
         // DUMMY REVIEWS FOR FRONTEND PRELOAD (Prevents Empty/Stuck Marquee)
         const DUMMY_REVIEWS = [
-            { rating: 5, userName: 'Ali Bin Abu', comment: 'Excellent service! The team was very professional and the delivery was faster than expected.', timestamp: null },
-            { rating: 5, userName: 'Sarah Lee', comment: 'Highly recommended. My new website looks amazing and functions perfectly.', timestamp: null },
-            { rating: 5, userName: 'Tech Solutions', comment: 'Great communication throughout the project. Will definitely work with DDNetwork again.', timestamp: null },
-            { rating: 5, userName: 'Ahmad Razak', comment: 'Best decision for my business. The AI integration is a game changer.', timestamp: null },
-            { rating: 4, userName: 'Jessica Tan', comment: 'Very happy with the design. Support team is responsive.', timestamp: null }
+            { rating: 5, userName: 'PNE Arena Enterprise', comment: 'Excellent service! The team was very professional and the delivery was faster than expected.', timestamp: null },
         ];
 
         function setupStarRating() {
