--- a/index.html
+++ b/index.html
@@ -3036,11 +3036,11 @@ Through DD Cloud Network, I created DDNetwork as a dedicated brand to help local
     // ==========================================
     const firebaseConfig = {
         apiKey: "AIzaSyAwf31b-wpYQwPbd-3DxnqGVRw8g3xq938",
-        authDomain: "www.ddnet.my",
+        authDomain: "ddnetwork-database.firebaseapp.com",
         projectId: "ddnetwork-database",
         storageBucket: "ddnetwork-database.firebasestorage.app",
         messagingSenderId: "699127560990",
-        appId: "1:699127560990:web:vg8k3pcvhkomoeb99tr333960v6ohj5m"
+        appId: "1:699127560990:web:50cfd61ff620bc85fb670f"
     };
 
     let db, auth;
