--- a/index.html
+++ b/index.html
@@ -3036,7 +3036,7 @@ Through DD Cloud Network, I created DDNetwork as a dedicated brand to help local
     // ==========================================
     const firebaseConfig = {
         apiKey: "AIzaSyAwf31b-wpYQwPbd-3DxnqGVRw8g3xq938",
-        authDomain: "ddnet.my",
+        authDomain: "www.ddnet.my",
         projectId: "ddnetwork-database",
         storageBucket: "ddnetwork-database.firebasestorage.app",
         messagingSenderId: "699127560990",
