--- a/index.html
+++ b/index.html
@@ -3040,7 +3040,7 @@ Through DD Cloud Network, I created DDNetwork as a dedicated brand to help local
         projectId: "ddnetwork-database",
         storageBucket: "ddnetwork-database.firebasestorage.app",
         messagingSenderId: "699127560990",
-        appId: "1:699127560990:web:50cfd61ff620bc85fb670f"
+        appId: "1:699127560990:web:vg8k3pcvhkomoeb99tr333960v6ohj5m."
     };
 
     let db, auth;
