--- a/index.html
+++ b/index.html
@@ -1916,7 +1916,7 @@
                     <form onsubmit="handleSignup(event)">
                         <div class="form-group">
                             <label class="form-label">Full Name</label>
-                            <input type="text" id="signup-name" class="form-input" placeholder="Bella" required>
+                            <input type="text" id="signup-name" class="form-input" placeholder="e.g. Nurul Nabila" required>
                         </div>
                         <div class="form-group">
                             <label class="form-label">Phone Number</label>
@@ -1962,7 +1962,7 @@
                         <div class="profile-details-grid">
                             <div class="form-group">
                                 <label class="form-label">Full Name</label>
-                                <input type="text" id="ticket-name" class="form-input" placeholder="Bella" required>
+                                <input type="text" id="ticket-name" class="form-input" placeholder="e.g. Nurul Nabila" required>
                             </div>
                             <div class="form-group">
                                 <label class="form-label">Email Address</label>
@@ -2587,7 +2587,7 @@ Through DD Cloud Network, I created DDNetwork as a dedicated brand to help local
                     </div>
                     <div class="footer-contact-item">
                         <i class="ri-whatsapp-line"></i>
-                        <span>+60 12-260 0969</span>
+                        <span>Not yet Available</span>
                     </div>
                 </div>
 
