--- a/index.html
+++ b/index.html
@@ -3158,7 +3158,7 @@ Through DD Cloud Network, I created DDNetwork as a dedicated brand to help local
     
     const DEFAULT_PAYMENT_METHODS = [
         { id: 'tng', name: 'TNG eWallet', link: 'https://payment.tngdigital.com.my/sc/bDLob7YcpG', active: true },
-        { id: 'fpx', name: 'Online Banking (FPX)', link: 'https://toyyibpay.com', active: true } 
+        { id: 'fpx', name: 'Online Banking (FPX)', link: 'https://buy.stripe.com/7sY14nfB04fw1Vibo7gnK00', active: true } 
     ];
 
     let siteConfig = { maintenance_active: false, payment_methods: [], packageDetails: {} };
