--- a/index.html
+++ b/index.html
@@ -1657,7 +1657,7 @@
 
             <div class="home-section">
                 <div class="container">
-                    <div class="section-header"><h2>Our Solutions</h2><p>From simple landing pages to complex AI-powered systems, we have a package for every stage of your business growth.</p></div>
+                    <div class="section-header"><h2>Our Solutions</h2><p>Designed in Malaysia. Built for the world.</p></div>
                     <div class="services-grid">
                         <div class="service-card">
                             <div class="service-icon"><i class="ri-layout-4-line"></i></div>
