--- a/index.html
+++ b/index.html
@@ -2353,6 +2353,7 @@
                 <div style="display: flex; gap: 1rem;">
                     <a href="https://www.linkedin.com/in/muhammad-danial-danish-217bb82ba/" style="width: 40px; height: 40px; background: var(--bg-surface); border-radius: 50%; display: flex; align-items: center; justify-content: center; border:1px solid var(--border-glass);"><i class="ri-linkedin-fill"></i></a>
                     <a href="https://www.instagram.com/danialddanish/" style="width: 40px; height: 40px; background: var(--bg-surface); border-radius: 50%; display: flex; align-items: center; justify-content: center; border:1px solid var(--border-glass);"><i class="ri-instagram-line"></i></a>
+                    <a href="https://www.tiktok.com/@ddnet.my/" style="width: 40px; height: 40px; background: var(--bg-surface); border-radius: 50%; display: flex; align-items: center; justify-content: center; border:1px solid var(--border-glass);"><i class="ri-tiktok-line"></i></a>
                 </div>
             </div>
         </section>
@@ -2435,7 +2436,7 @@
                 <div class="mac-dock">
                     <a href="https://www.linkedin.com/in/muhammad-danial-danish-217bb82ba/" target="_blank" class="dock-icon"><i class="ri-linkedin-fill"></i></a>
                     <a href="https://www.instagram.com/ddnet.my/" target="_blank" class="dock-icon"><i class="ri-instagram-line"></i></a>
-                    <a href="https://tiktok.com/@danialddanish/" target="_blank" class="dock-icon"><i class="ri-tiktok-fill"></i></a>
+                    <a href="https://tiktok.com/@ddnet.my/" target="_blank" class="dock-icon"><i class="ri-tiktok-fill"></i></a>
                     <a href="https://x.com" target="_blank" class="dock-icon"><i class="ri-twitter-x-fill"></i></a>
                 </div>
             </div>
